deployment/amqp-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    twitter: amqp-service
  name: amqp-service
spec:
  type: NodePort
  ports:
  - name: service
    port: 5672
    targetPort: 5672
  - name: interface
    port: 15672
    targetPort: 15672
    nodePort: 30002
  selector:
    twitter: amqp-service
