deployment/auth-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    twitter: auth-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    twitter: auth-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    twitter: auth-service
  name: auth-service
spec:
  replicas: 3
  selector:
    matchLabels:
      twitter: auth-service
  template:
    metadata:
      labels: 
        twitter: auth-service
    spec:
      containers:
      - image: richackard/twitter_auth_service
        name: auth-service
      restartPolicy: Always
