deployment/memcached-service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: memcache-memcached
  labels:
    name: memcached
spec:
  ports:
  - port: 11211
    targetPort: 11211
    protocol: TCP
  selector:
    role: memcached
    mode: standalone
