deployment/mongo-db-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-node01
spec:
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
  selector:
    app: mongo-db
