deployment/monitor-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus-server
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30003
  selector:
    app: prometheus-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.2.1
          args:
            - "-config.file=/etc/prometheus/prometheus.yml"
            - "-storage.local.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
  
        - name: prometheus-storage-volume
          emptyDir: {}
