deployment/api-ingress.yml
apiVersion: twitter/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: api-gateway
    servicePort: 80
